--- a/css/base.css
+++ b/css/base.css
@@ -1,10 +1,13 @@
 .wrap {
   min-height: 100vh;
   font-size: 0;
+  position: relative;
 }
 .wrap .ctx-body {
   height: calc(100vh - 1.2rem /* 120/100 */);
   overflow-y: scroll;
+  overflow-x: hidden;
+  background: #fff;
 }
 .wrap .ctx-body .swiper-wrap .swiper-container {
   height: 3.75rem /* 375/100 */;
@@ -33,30 +36,247 @@
 }
 .wrap .ctx-body .main .nav-tab-wrap {
   padding-top: 0.14rem /* 14/100 */;
-  padding-bottom: 0.4rem /* 40/100 */;
+  padding-bottom: 0.35rem /* 35/100 */;
 }
 .wrap .ctx-body .main .nav-tab-wrap .nav-tabs {
   display: flex;
   align-items: center;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 .wrap .ctx-body .main .nav-tab-wrap .nav-tabs .tab>a {
   display: block;
-  height: 1.35rem /* 135/100 */;
-  font-size: 0.26rem /* 26/100 */;
   text-align: center;
   text-decoration: none;
-  margin-right: 0.625rem /* 62.5/100 */;
+  margin-right: 0.375rem /* 37.5/100 */;
 }
 .wrap .ctx-body .main .nav-tab-wrap .nav-tabs .tab>a i {
-  width: 0.88rem /* 88/100 */;
-  height: 0.88rem /* 88/100 */;
+  width: 1.08rem /* 108/100 */;
+  height: 1.08rem /* 108/100 */;
   display: block;
+}
+.wrap .ctx-body .main .nav-tab-wrap .nav-tabs .tab>a span {
+  font-size: 0.26rem /* 26/100 */;
+  line-height: 0.26rem /* 26/100 */;
+  color: #333;
 }
 .wrap .ctx-body .main .nav-tab-wrap .nav-tabs .tab>a .film {
   background: url("../img/icon/film-icon.png");
-  background-size: 0.88rem /* 88/100 */ 0.88rem /* 88/100 */;
+  background-size: 1.08rem /* 108/100 */ 1.08rem /* 108/100 */;
+}
+.wrap .ctx-body .main .nav-tab-wrap .nav-tabs .tab>a .drama {
+  background: url("../img/icon/drama-icon.png");
+  background-size: 1.08rem /* 108/100 */ 1.08rem /* 108/100 */;
+}
+.wrap .ctx-body .main .nav-tab-wrap .nav-tabs .tab>a .variety {
+  background: url("../img/icon/variety-icon.png");
+  background-size: 1.08rem /* 108/100 */ 1.08rem /* 108/100 */;
+}
+.wrap .ctx-body .main .nav-tab-wrap .nav-tabs .tab>a .comic {
+  background: url("../img/icon/comic-icon.png");
+  background-size: 1.08rem /* 108/100 */ 1.08rem /* 108/100 */;
+}
+.wrap .ctx-body .main .nav-tab-wrap .nav-tabs .tab>a .child {
+  background: url("../img/icon/child-icon.png");
+  background-size: 1.08rem /* 108/100 */ 1.08rem /* 108/100 */;
+}
+.wrap .ctx-body .main .fall-wrap {
+  margin-bottom: 0.4rem /* 40/100 */;
+}
+.wrap .ctx-body .main .fall-wrap .fall-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-head .fall-name {
+  font-size: 0.32rem /* 32/100 */;
+  color: #333;
+  line-height: 0.42rem /* 42/100 */;
+  margin-left: 0.2rem /* 20/100 */;
+  position: relative;
+}
+.wrap .ctx-body .main .fall-wrap .fall-head .fall-name:before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 0.06rem /* 6/100 */;
+  height: 0.32rem /* 32/100 */;
+  background: #0076ff;
+  left: -0.14rem /* 14/100 */;
+  border-radius: 0.03rem /* 3/100 */;
+  top: 0.05rem /* 5/100 */;
+}
+.wrap .ctx-body .main .fall-wrap .fall-head .more {
+  font-size: 0.24rem /* 24/100 */;
+  color: #666;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body {
+  margin-top: 0.2rem /* 20/100 */;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li {
+  display: inline-block;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li a {
+  display: block;
+  width: 3.35rem /* 335/100 */;
+  height: 1.89rem /* 189/100 */;
+  border-radius: 0.1rem /* 10/100 */;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-name {
+  font-size: 0.24rem /* 24/100 */;
+  color: #333;
+  line-height: 0.3rem /* 30/100 */;
+  text-align: center;
+  width: 3.08rem /* 308/100 */;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0.2rem /* 20/100 */ auto 0;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m1 {
+  background: url("../img/section/m1.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m2 {
+  background: url("../img/section/m2.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m3 {
+  background: url("../img/section/m3.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m4 {
+  background: url("../img/section/m4.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m5 {
+  background: url("../img/section/m5.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m6 {
+  background: url("../img/section/m6.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m7 {
+  background: url("../img/section/m7.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m8 {
+  background: url("../img/section/m8.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m9 {
+  background: url("../img/section/m9.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li .film-img-m10 {
+  background: url("../img/section/m10.png");
+  background-size: cover;
+  background-position: center;
+}
+.wrap .ctx-body .main .fall-wrap .fall-body>li:first-child {
+  margin-right: 0.19rem /* 19/100 */;
+}
+.wrap .ctx-body .main .end {
+  text-align: center;
+  margin-bottom: 0.5rem /* 50/100 */;
+}
+.wrap .ctx-body .main .end img {
+  width: 0.4rem /* 40/100 */;
+  height: 0.4rem /* 40/100 */;
+}
+.wrap .ctx-body .main .end p {
+  font-size: 0.24rem /* 24/100 */;
+  color: #ccc;
+  margin-top: 0.13rem /* 13/100 */;
 }
 .wrap .ctx-footer {
   height: 1.2rem /* 120/100 */;
+  display: flex;
+  background: #fff;
+  box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.1);
+}
+.wrap .ctx-footer ul {
+  width: 100%;
+  display: flex;
+  padding: 0 0.9rem /* 90/100 */;
+  justify-content: space-between;
+  align-items: center;
+}
+.wrap .ctx-footer ul li>a {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+}
+.wrap .ctx-footer ul li>a i {
+  display: block;
+  width: 0.4rem /* 40/100 */;
+  height: 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul li>a .recommend {
+  background: url("../img/icon/recommend.png");
+  background-size: 0.4rem /* 40/100 */ 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul li>a .movies {
+  background: url("../img/icon/movies.png");
+  background-size: 0.4rem /* 40/100 */ 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul li>a .member {
+  background: url("../img/icon/member.png");
+  background-size: 0.4rem /* 40/100 */ 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul li>a .my {
+  background: url("../img/icon/my.png");
+  background-size: 0.4rem /* 40/100 */ 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul li>a .title {
+  font-size: 0.22rem /* 22/100 */;
+  display: inline-block;
+  color: #6d6d6d;
+  line-height: 0.3rem /* 30/100 */;
+  margin-top: 0.09rem /* 9/100 */;
+}
+.wrap .ctx-footer ul .active .recommend {
+  background: url("../img/icon/recommend-active.png");
+  background-size: 0.4rem /* 40/100 */ 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul .active .movies {
+  background: url("../img/icon/movies-active.png");
+  background-size: 0.4rem /* 40/100 */ 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul .active .member {
+  background: url("../img/icon/member-active.png");
+  background-size: 0.4rem /* 40/100 */ 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul .active .my {
+  background: url("../img/icon/my-active.png");
+  background-size: 0.4rem /* 40/100 */ 0.4rem /* 40/100 */;
+}
+.wrap .ctx-footer ul .active .title {
+  font-size: 0.22rem /* 22/100 */;
+  display: inline-block;
+  color: #0076ff;
+  line-height: 0.3rem /* 30/100 */;
+  margin-top: 0.09rem /* 9/100 */;
+}
+.wrap .advertisement {
+  position: absolute;
+  bottom: 1.34rem /* 134/100 */;
+  right: 0.15rem /* 15/100 */;
+  display: block;
+  width: 1.8rem /* 180/100 */;
+  height: 1.8rem /* 180/100 */;
+}
+.wrap .advertisement>img {
+  width: 100%;
+  height: 100%;
 }
