--- a/css/base.styl
+++ b/css/base.styl
@@ -1,9 +1,12 @@
 .wrap
     min-height 100vh
     font-size 0
+    position relative
     .ctx-body
         height calc(100vh - 1.2rem /* 120/100 */)
         overflow-y scroll
+        overflow-x hidden
+        background #fff
         .swiper-wrap 
             .swiper-container
                 height 3.75rem /* 375/100 */
@@ -27,24 +30,164 @@
             padding 0 .3rem /* 30/100 */
             .nav-tab-wrap
                 padding-top .14rem /* 14/100 */
-                padding-bottom .4rem /* 40/100 */
+                padding-bottom .35rem /* 35/100 */
                 .nav-tabs
                     display flex
                     align-items center
                     overflow-x scroll
+                    overflow-y hidden
                     .tab>a
                         display block
-                        height 1.35rem /* 135/100 */
-                        font-size .26rem /* 26/100 */
                         text-align center
                         text-decoration none
-                        margin-right .625rem /* 62.5/100 */
+                        margin-right .375rem /* 37.5/100 */
                         i
-                            width .88rem /* 88/100 */
-                            height .88rem /* 88/100 */
+                            width 1.08rem /* 108/100 */
+                            height 1.08rem /* 108/100 */
                             display block
+                        span
+                            font-size .26rem /* 26/100 */
+                            line-height .26rem /* 26/100 */
+                            color #333333
                         .film
                             background url('../img/icon/film-icon.png')
-                            background-size .88rem /* 88/100 */.88rem /* 88/100 */
+                            background-size 1.08rem /* 108/100 */ 1.08rem /* 108/100 */
+                        .drama
+                            background url('../img/icon/drama-icon.png')
+                            background-size 1.08rem /* 108/100 */ 1.08rem /* 108/100 */
+                        .variety
+                            background url('../img/icon/variety-icon.png')
+                            background-size 1.08rem /* 108/100 */ 1.08rem /* 108/100 */
+                        .comic
+                            background url('../img/icon/comic-icon.png')
+                            background-size 1.08rem /* 108/100 */ 1.08rem /* 108/100 */
+                        .child
+                            background url('../img/icon/child-icon.png')
+                            background-size 1.08rem /* 108/100 */ 1.08rem /* 108/100 */
+            .fall-wrap
+                margin-bottom .4rem /* 40/100 */
+                .fall-head
+                    display flex
+                    justify-content space-between
+                    align-items center
+                    .fall-name
+                        font-size .32rem /* 32/100 */
+                        color #333333
+                        line-height .42rem /* 42/100 */
+                        margin-left .2rem /* 20/100 */
+                        position relative
+                        &:before
+                            content ''
+                            display block
+                            position absolute   
+                            width .06rem /* 6/100 */
+                            height .32rem /* 32/100 */
+                            background #0076FF
+                            left -0.14rem /* 14/100 */
+                            border-radius .03rem /* 3/100 */
+                            top .05rem /* 5/100 */    
+                    .more
+                        font-size .24rem /* 24/100 */
+                        color #666666   
+                .fall-body
+                    margin-top .2rem /* 20/100 */
+                    &>li
+                        display inline-block
+                        a
+                            display block
+                            width 3.35rem /* 335/100 */
+                            height 1.89rem /* 189/100 */
+                            border-radius .1rem /* 10/100 */
+                        .film-name
+                            font-size .24rem /* 24/100 */
+                            color #333
+                            line-height .3rem /* 30/100 */
+                            text-align center
+                            width 3.08rem /* 308/100 */
+                            text-overflow ellipsis
+                            white-space nowrap
+                            overflow hidden
+                            margin .2rem /* 20/100 */ auto 0    
+                        for m in (1..10)
+                            .film-img-m{m}  
+                                background url("../img/section/m"+m+".png")
+                                background-size cover
+                                background-position center
+                        &:first-child
+                            margin-right .19rem /* 19/100 */
+            .end
+                text-align center
+                margin-bottom .5rem /* 50/100 */
+                img
+                    width .4rem /* 40/100 */
+                    height .4rem /* 40/100 */
+                p
+                    font-size .24rem /* 24/100 */
+                    color #ccc
+                    margin-top .13rem /* 13/100 */
     .ctx-footer
         height 1.2rem /* 120/100 */
+        display flex
+        background #fff
+        box-shadow 0px 0px 30px 0px rgba(0,0,0,0.1)
+        ul
+            width 100%
+            display flex
+            padding 0 .9rem /* 90/100 */
+            justify-content space-between
+            align-items center
+            li>a
+                display inline-block
+                text-align center
+                text-decoration none
+                i
+                    display block
+                    width .4rem /* 40/100 */
+                    height .4rem /* 40/100 */
+                .recommend
+                    background url('../img/icon/recommend.png')
+                    background-size .4rem /* 40/100 */.4rem /* 40/100 */
+                .movies
+                    background url('../img/icon/movies.png')
+                    background-size .4rem /* 40/100 */.4rem /* 40/100 */
+                .member
+                    background url('../img/icon/member.png')
+                    background-size .4rem /* 40/100 */.4rem /* 40/100 */
+                .my
+                    background url('../img/icon/my.png')
+                    background-size .4rem /* 40/100 */.4rem /* 40/100 */
+                .title
+                    font-size .22rem /* 22/100 */
+                    display inline-block
+                    color #6D6D6D
+                    line-height .3rem /* 30/100 */
+                    margin-top .09rem /* 9/100 */
+            .active
+                .recommend
+                    background url('../img/icon/recommend-active.png')
+                    background-size .4rem /* 40/100 */.4rem /* 40/100 */
+                .movies
+                    background url('../img/icon/movies-active.png')
+                    background-size .4rem /* 40/100 */.4rem /* 40/100 */
+                .member
+                    background url('../img/icon/member-active.png')
+                    background-size .4rem /* 40/100 */.4rem /* 40/100 */
+                .my
+                    background url('../img/icon/my-active.png')
+                    background-size .4rem /* 40/100 */.4rem /* 40/100 */
+                .title
+                    font-size .22rem /* 22/100 */
+                    display inline-block
+                    color #0076FF
+                    line-height .3rem /* 30/100 */
+                    margin-top .09rem /* 9/100 */
+    .advertisement
+        position absolute
+        bottom 1.34rem /* 134/100 */
+        right .15rem /* 15/100 */
+        display block
+        width 1.8rem /* 180/100 */
+        height 1.8rem /* 180/100 */
+        &>img
+            width 100%
+            height 100% 
