--- a/css/base.css
+++ b/css/base.css
@@ -275,8 +275,9 @@
   display: block;
   width: 1.8rem /* 180/100 */;
   height: 1.8rem /* 180/100 */;
+  z-index: 1000;
 }
 .wrap .advertisement>img {
-  width: 100%;
-  height: 100%;
+  width: 1.8rem /* 180/100 */;
+  height: 1.8rem /* 180/100 */;
 }
