--- a/css/base.styl
+++ b/css/base.styl
@@ -188,6 +188,7 @@
         display block
         width 1.8rem /* 180/100 */
         height 1.8rem /* 180/100 */
+        z-index 1000
         &>img
-            width 100%
-            height 100% 
+            width 1.8rem /* 180/100 */
+            height 1.8rem /* 180/100 */
