--- a/css/my.css
+++ b/css/my.css
@@ -502,3 +502,85 @@
   width: 1.8rem /* 180/100 */;
   height: 1.8rem /* 180/100 */;
 }
+.accountInfo-box {
+  width: 100%;
+  height: 1.97rem /* 197/100 */;
+  background: url("../img/section/accountInfo-bg.png");
+  background-size: 100%;
+  position: relative;
+}
+.accountInfo-box .status {
+  width: 6.9rem /* 690/100 */;
+  height: 1rem /* 100/100 */;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #fff;
+  box-shadow: 0px 7px 14px 0px rgba(0,118,255,0.15);
+  border-radius: 0.14rem /* 14/100 */;
+  display: flex;
+  align-items: center;
+  padding: 0 0.4rem /* 40/100 */;
+}
+.accountInfo-box .status .boundStatus {
+  width: 0.24rem /* 24/100 */;
+  height: 0.24rem /* 24/100 */;
+  display: block;
+  margin-right: 0.2rem /* 20/100 */;
+}
+.accountInfo-box .status .bound {
+  background: url("../img/icon/bound-icon.png");
+  background-size: 0.24rem /* 24/100 */;
+}
+.accountInfo-box .status .unbound {
+  background: url("../img/icon/unbound-icon.png");
+  background-size: 0.24rem /* 24/100 */;
+}
+.accountInfo-box .status .status-text {
+  font-size: 0.26rem /* 26/100 */;
+  color: #333;
+  flex: 1;
+}
+.accountInfo-box .status .status-btn {
+  width: 1.4rem /* 140/100 */;
+  height: 0.5rem /* 50/100 */;
+  line-height: 0.5rem /* 50/100 */;
+  outline: none;
+  border-radius: 0.14rem /* 14/100 */;
+  background: #0076ff;
+  font-size: 0.24rem /* 24/100 */;
+  color: #fff;
+  border: 0;
+}
+.main dl {
+  margin: 0.4rem /* 40/100 */ 0;
+}
+.main dl dt {
+  font-size: 0.28rem /* 28/100 */;
+  color: #6d6d6d;
+  line-height: 0.37rem /* 37/100 */;
+}
+.main dl dd ul {
+  padding: 0.4rem /* 40/100 */ 0.37rem /* 37/100 */;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.02rem /* 2/100 */ solid #e9e9e9;
+}
+.main dl dd ul li a {
+  display: inline-block;
+  width: 1rem /* 100/100 */;
+  height: 1.25rem /* 125/100 */;
+  text-decoration: none;
+  text-align: center;
+}
+.main dl dd ul li a img {
+  height: 0.64rem /* 64/100 */;
+  width: 0.64rem /* 64/100 */;
+}
+.main dl dd ul li a span {
+  display: inline-block;
+  font-size: 0.24rem /* 24/100 */;
+  color: #333;
+  margin-top: 0.3rem /* 30/100 */;
+}
