--- a/css/base.styl
+++ b/css/base.styl
@@ -89,6 +89,7 @@
                     .more
                         font-size .24rem /* 24/100 */
                         color #666666   
+                        text-decoration none
                 .fall-body
                     margin-top .2rem /* 20/100 */
                     &>li
@@ -287,6 +288,7 @@
                 text-decoration none
                 i
                     display block
+                    margin 0 auto
                     width .4rem /* 40/100 */
                     height .4rem /* 40/100 */
                 .recommend
